--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -40,7 +40,18 @@ Dma.ADC3.1.Priority=DMA_PRIORITY_LOW
 Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART2_RX
 Dma.Request1=ADC3
-Dma.RequestsNb=2
+Dma.Request2=UART4_RX
+Dma.RequestsNb=3
+Dma.UART4_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.2.Instance=DMA1_Stream2
+Dma.UART4_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.2.Mode=DMA_CIRCULAR
+Dma.UART4_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.UART4_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -144,6 +155,7 @@ MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
