--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -110,44 +110,45 @@ Mcu.Pin21=PA6
 Mcu.Pin22=PA7
 Mcu.Pin23=PC4
 Mcu.Pin24=PC5
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD12
+Mcu.Pin25=PF12
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
+Mcu.Pin28=PD8
+Mcu.Pin29=PD9
 Mcu.Pin3=PE5
-Mcu.Pin30=PG6
-Mcu.Pin31=PG7
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PC10
+Mcu.Pin30=PD12
+Mcu.Pin31=PG6
+Mcu.Pin32=PG7
+Mcu.Pin33=PA8
+Mcu.Pin34=PA9
+Mcu.Pin35=PA10
+Mcu.Pin36=PA11
+Mcu.Pin37=PA12
+Mcu.Pin38=PA13
+Mcu.Pin39=PA14
 Mcu.Pin4=PC13
-Mcu.Pin40=PC11
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PG11
-Mcu.Pin44=PG13
-Mcu.Pin45=PB3
-Mcu.Pin46=PB7
-Mcu.Pin47=PB8
-Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin40=PC10
+Mcu.Pin41=PC11
+Mcu.Pin42=PD5
+Mcu.Pin43=PD6
+Mcu.Pin44=PG11
+Mcu.Pin45=PG13
+Mcu.Pin46=PB3
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=VP_SYS_VS_Systick
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin54=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin55=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=55
+Mcu.PinsNb=56
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -325,6 +326,10 @@ PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=angle_0
 PF1.Locked=true
 PF1.Signal=GPIO_Output
+PF12.GPIOParameters=GPIO_Label
+PF12.GPIO_Label=photodiode1
+PF12.Locked=true
+PF12.Signal=GPIO_Input
 PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF3.GPIO_Label=Auto_Hand_Betrieb
 PF3.GPIO_PuPd=GPIO_PULLDOWN
@@ -365,7 +370,7 @@ PH1/OSC_OUT.Locked=true
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
