--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -116,38 +116,43 @@ Mcu.Pin27=PD8
 Mcu.Pin28=PD9
 Mcu.Pin29=PD12
 Mcu.Pin3=PE5
-Mcu.Pin30=PG6
-Mcu.Pin31=PG7
-Mcu.Pin32=PA8
-Mcu.Pin33=PA9
-Mcu.Pin34=PA10
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PC10
+Mcu.Pin30=PD15
+Mcu.Pin31=PG2
+Mcu.Pin32=PG3
+Mcu.Pin33=PG4
+Mcu.Pin34=PG5
+Mcu.Pin35=PG6
+Mcu.Pin36=PG7
+Mcu.Pin37=PA8
+Mcu.Pin38=PA9
+Mcu.Pin39=PA10
 Mcu.Pin4=PC13
-Mcu.Pin40=PC11
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PG11
-Mcu.Pin44=PG13
-Mcu.Pin45=PB3
-Mcu.Pin46=PB7
-Mcu.Pin47=PB8
-Mcu.Pin48=VP_SYS_VS_Systick
-Mcu.Pin49=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin40=PA11
+Mcu.Pin41=PA12
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PC10
+Mcu.Pin45=PC11
+Mcu.Pin46=PD5
+Mcu.Pin47=PD6
+Mcu.Pin48=PG11
+Mcu.Pin49=PG13
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin54=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=PB3
+Mcu.Pin51=PB7
+Mcu.Pin52=PB8
+Mcu.Pin53=VP_SYS_VS_Systick
+Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=55
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -283,6 +288,10 @@ PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.6
 PD12.Signal=S_TIM4_CH1
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=Status_buzzer
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
@@ -347,6 +356,22 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
+PG2.GPIOParameters=GPIO_Label
+PG2.GPIO_Label=Status_LED_1
+PG2.Locked=true
+PG2.Signal=GPIO_Output
+PG3.GPIOParameters=GPIO_Label
+PG3.GPIO_Label=Status_LED_2
+PG3.Locked=true
+PG3.Signal=GPIO_Output
+PG4.GPIOParameters=GPIO_Label
+PG4.GPIO_Label=Status_LED_3
+PG4.Locked=true
+PG4.Signal=GPIO_Output
+PG5.GPIOParameters=GPIO_Label
+PG5.GPIO_Label=Status_LED_4
+PG5.Locked=true
+PG5.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.GPIO_PuPd=GPIO_PULLDOWN
