--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -116,43 +116,40 @@ Mcu.Pin27=PD8
 Mcu.Pin28=PD9
 Mcu.Pin29=PD12
 Mcu.Pin3=PE5
-Mcu.Pin30=PD15
-Mcu.Pin31=PG2
-Mcu.Pin32=PG3
-Mcu.Pin33=PG4
-Mcu.Pin34=PG5
-Mcu.Pin35=PG6
-Mcu.Pin36=PG7
-Mcu.Pin37=PA8
-Mcu.Pin38=PA9
-Mcu.Pin39=PA10
+Mcu.Pin30=PG4
+Mcu.Pin31=PG5
+Mcu.Pin32=PG6
+Mcu.Pin33=PG7
+Mcu.Pin34=PA8
+Mcu.Pin35=PA9
+Mcu.Pin36=PA10
+Mcu.Pin37=PA11
+Mcu.Pin38=PA12
+Mcu.Pin39=PA13
 Mcu.Pin4=PC13
-Mcu.Pin40=PA11
-Mcu.Pin41=PA12
-Mcu.Pin42=PA13
-Mcu.Pin43=PA14
-Mcu.Pin44=PC10
-Mcu.Pin45=PC11
-Mcu.Pin46=PD5
-Mcu.Pin47=PD6
-Mcu.Pin48=PG11
-Mcu.Pin49=PG13
+Mcu.Pin40=PA14
+Mcu.Pin41=PC10
+Mcu.Pin42=PC11
+Mcu.Pin43=PD5
+Mcu.Pin44=PD6
+Mcu.Pin45=PG11
+Mcu.Pin46=PG13
+Mcu.Pin47=PB3
+Mcu.Pin48=PB7
+Mcu.Pin49=PB8
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=PB3
-Mcu.Pin51=PB7
-Mcu.Pin52=PB8
-Mcu.Pin53=VP_SYS_VS_Systick
-Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_SYS_VS_Systick
+Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=60
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -288,10 +285,6 @@ PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.6
 PD12.Signal=S_TIM4_CH1
-PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=Status_buzzer
-PD15.Locked=true
-PD15.Signal=GPIO_Output
 PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
@@ -306,21 +299,19 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE2.GPIO_Label=Flash_start
-PE2.GPIO_PuPd=GPIO_PULLDOWN
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=Status_LED1
 PE2.Locked=true
-PE2.Signal=GPIO_Input
+PE2.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=NotAus
 PE3.GPIO_PuPd=GPIO_PULLDOWN
 PE3.Locked=true
 PE3.Signal=GPIO_Input
-PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE4.GPIO_Label=free_button1
-PE4.GPIO_PuPd=GPIO_PULLDOWN
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=Status_buzzer
 PE4.Locked=true
-PE4.Signal=GPIO_Input
+PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=free_button2
 PE5.GPIO_PuPd=GPIO_PULLDOWN
@@ -341,11 +332,10 @@ PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF6.Mode=IN4
 PF6.Signal=ADC3_IN4
-PF8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PF8.GPIO_Label=Flash_stop
-PF8.GPIO_PuPd=GPIO_PULLDOWN
+PF8.GPIOParameters=GPIO_Label
+PF8.GPIO_Label=Status_LED2
 PF8.Locked=true
-PF8.Signal=GPIO_Input
+PF8.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -356,14 +346,6 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
-PG2.GPIOParameters=GPIO_Label
-PG2.GPIO_Label=Status_LED_1
-PG2.Locked=true
-PG2.Signal=GPIO_Output
-PG3.GPIOParameters=GPIO_Label
-PG3.GPIO_Label=Status_LED_2
-PG3.Locked=true
-PG3.Signal=GPIO_Output
 PG4.GPIOParameters=GPIO_Label
 PG4.GPIO_Label=Status_LED_3
 PG4.Locked=true
@@ -416,7 +398,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM1_Init-TIM1-false-HAL-true,15-MX_TIM10_Init-TIM10-false-HAL-true,16-MX_UART4_Init-UART4-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
