--- a/ProjectCube.ioc
+++ b/ProjectCube.ioc
@@ -110,46 +110,48 @@ Mcu.Pin21=PA6
 Mcu.Pin22=PA7
 Mcu.Pin23=PC4
 Mcu.Pin24=PC5
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD12
+Mcu.Pin25=PF12
+Mcu.Pin26=PF13
+Mcu.Pin27=PB13
+Mcu.Pin28=PB14
+Mcu.Pin29=PD8
 Mcu.Pin3=PE5
-Mcu.Pin30=PG4
-Mcu.Pin31=PG5
-Mcu.Pin32=PG6
-Mcu.Pin33=PG7
-Mcu.Pin34=PA8
-Mcu.Pin35=PA9
-Mcu.Pin36=PA10
-Mcu.Pin37=PA11
-Mcu.Pin38=PA12
-Mcu.Pin39=PA13
+Mcu.Pin30=PD9
+Mcu.Pin31=PD12
+Mcu.Pin32=PG4
+Mcu.Pin33=PG5
+Mcu.Pin34=PG6
+Mcu.Pin35=PG7
+Mcu.Pin36=PA8
+Mcu.Pin37=PA9
+Mcu.Pin38=PA10
+Mcu.Pin39=PA11
 Mcu.Pin4=PC13
-Mcu.Pin40=PA14
-Mcu.Pin41=PC10
-Mcu.Pin42=PC11
-Mcu.Pin43=PD5
-Mcu.Pin44=PD6
-Mcu.Pin45=PG11
-Mcu.Pin46=PG13
-Mcu.Pin47=PB3
-Mcu.Pin48=PB7
-Mcu.Pin49=PB8
+Mcu.Pin40=PA12
+Mcu.Pin41=PA13
+Mcu.Pin42=PA14
+Mcu.Pin43=PC10
+Mcu.Pin44=PC11
+Mcu.Pin45=PD5
+Mcu.Pin46=PD6
+Mcu.Pin47=PG11
+Mcu.Pin48=PG13
+Mcu.Pin49=PB3
 Mcu.Pin5=PC14/OSC32_IN
-Mcu.Pin50=VP_SYS_VS_Systick
-Mcu.Pin51=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=PB7
+Mcu.Pin51=PB8
+Mcu.Pin52=VP_SYS_VS_Systick
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin58=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin7=PF0
 Mcu.Pin8=PF1
 Mcu.Pin9=PF3
-Mcu.PinsNb=57
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -325,6 +327,14 @@ PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=angle_0
 PF1.Locked=true
 PF1.Signal=GPIO_Output
+PF12.GPIOParameters=GPIO_Label
+PF12.GPIO_Label=photodiode1
+PF12.Locked=true
+PF12.Signal=GPIO_Input
+PF13.GPIOParameters=GPIO_Label
+PF13.GPIO_Label=photodiode2
+PF13.Locked=true
+PF13.Signal=GPIO_Input
 PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF3.GPIO_Label=Freigabe
 PF3.GPIO_PuPd=GPIO_PULLDOWN
